--- a/swj_bootstrap/src/main/webapp/resource/bootstrap/css/bootstrap.css
+++ b/swj_bootstrap/src/main/webapp/resource/bootstrap/css/bootstrap.css
@@ -2318,10 +2318,10 @@ th {
   border-bottom-width: 2px;
 }
 .table-striped > tbody > tr:nth-of-type(odd) {
-  background-color: #f9f9f9;
+  background-color: rgba(0, 0, 0, 0.075);
 }
 .table-hover > tbody > tr:hover {
-  background-color: #f5f5f5;
+  background-color: rgba(0, 0, 0, 0.075);
 }
 table col[class*="col-"] {
   position: static;
@@ -3524,6 +3524,7 @@ tbody.collapse.in {
   z-index: 1000;
   display: none;
   float: left;
+  min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0;
   font-size: 14px;
@@ -6752,14 +6753,5 @@ button.close {
   .hidden-print {
     display: none !important;
   }
-}
-a:hover{
-	text-decoration:none;
-}
-a:focus{
-	text-decoration:none;
-}
-a:active{
-	text-decoration:none;
 }
 /*# sourceMappingURL=bootstrap.css.map */
